kubernetes/apps/default/sonarr/ingressRoute.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr-service-extname
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/hostname: sonarr.porkboi.io
  labels:
    app.kubernetes.io/name: sonarr
spec:
  type: ExternalName
  externalName: porkboi.io
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr-web
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`sonarr.porkboi.io`)
      services:
        - name: sonarr
          port: 8989
      middlewares:
        - name: redirect-https
          namespace: networking
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`sonarr.porkboi.io`)
      services:
        - name: sonarr
          port: 8989
